--- a/Proiectweb/index.html
+++ b/Proiectweb/index.html
@@ -50,23 +50,22 @@
             </section>
             <a href="https://drive.google.com/drive/folders/1ihntwdyTGmkNxkMzQ01WVpWoHjJrtqmX">Random page link</a>
         </section>
-
         <section id="Promotii">
             <h2>Promotions</h2>
             <h3>
                 <math xmlns="http://www.w3.org/1998/Math/MathML">
                 <mrow>
-                  <mn>1</mn>
-                  <mo>+</mo>
-                  <mn>1</mn>
-                  <mo>=</mo>
-                  <mn>1</mn>
+                  <mn style="color:#ADFE03;">1</mn>
+                  <mo style="color:#ADFE03;">+</mo>
+                  <mn style="color:#ADFE03;">1</mn>
+                  <mo style="color:#ADFE03;">=</mo>
+                  <mn style="color:#ADFE03;">1</mn>
                 </mrow>
               </math>
             </h3>
     </header>
     <main>
-            <section>
+            <section style="padding: 3%;">
                 <div>
                     <p style="text-align: center;">
                         Our mission is to bring out the dark side of yourself, and embrace it instead of being scared of it. We're trying exactly that with our clothing, something new and dark.
@@ -105,6 +104,7 @@
     </main>
 
     <footer>
+        <a href="#" id="link-top" style="padding: 3%;">Top</a>
         <br>
         <a href="mailto:popmatei70@gmail.com" class="BUTTON_YEV"; style="align-self: center;">Mail Me</a>
         <br>    
