--- a/Proiectweb/index.html
+++ b/Proiectweb/index.html
@@ -16,6 +16,7 @@
     <meta name="msapplication-config" content="/Proiectweb/Resurse/Favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="CSS/Styles.css">
+    <link rel="stylesheet" href="CSS/GeneralCSS.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
     <title>The Darker Side</title>
 </head>
@@ -104,7 +105,7 @@
     </main>
 
     <footer>
-        <a href="#" id="link-top" style="padding: 3%;">Top</a>
+        <a href="#" id="link-top" style="padding: 3%;"><div id="triunghi"></div></a>
         <br>
         <a href="mailto:popmatei70@gmail.com" class="BUTTON_YEV"; style="align-self: center;">Mail Me</a>
         <br>    
