--- a/index.html
+++ b/index.html
@@ -56,38 +56,35 @@
   </header>
 
   <main>
-<!-- Area 1: Presentation Section -->
-    <div class="grid-area-1 grid-item">
-      <h2>Presentation</h2>
-      <p>Our mission is to bring out the dark side of yourself, and embrace it instead of being scared of it. We're trying exactly that with our clothing, something new and dark.</p>
-    </div>
+    <div class="grid-container">
+      <!-- Area 1: Presentation Section -->
+      <div class="grid-area-1 grid-item">
+        <h2>Presentation</h2>
+        <p>Our mission is to bring out the dark side of yourself, and embrace it instead of being scared of it. We're trying exactly that with our clothing, something new and dark.</p>
+      </div>
       <!-- Area 5: Online Users Placeholder -->
       <div class="grid-area-5 grid-item">
         <h3>Online Users</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
-
       <!-- Area 6: User Data Placeholder -->
       <div class="grid-area-6 grid-item">
         <h3>User Data and Statistics</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
-
       <!-- Area 7: Site Data Placeholder -->
       <div class="grid-area-7 grid-item">
         <h3>Site and Server Data</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
-
       <!-- Area 3: Calendar Placeholder -->
       <div class="grid-area-3 grid-item">
         <h3>Upcoming Events Calendar</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
-
       <!-- Area 2: Table Section -->
       <div class="grid-area-2 grid-item">
-        <div class="custom-table-container">
+        <div class="table-wrapper">
           <table class="custom-table">
             <caption>Upcoming Events</caption>
             <thead>
@@ -130,31 +127,24 @@
           </table>
         </div>
       </div>
-
       <!-- Area 4: Announcements Placeholder -->
       <div class="grid-area-4 grid-item">
         <h3>Announcements</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
-
-      <!-- Area 8: Additional Content -->
+      <!-- Area 8: Additional Content with Iframe -->
       <div class="grid-area-8 grid-item">
         <h3>Additional Content</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </div>
-
-      <!-- Area 9: Iframe and Video Section -->
-      <div class="grid-area-9 grid-item">
         <div class="container-iframe">
           <iframe name="ifr-video" src="https://www.youtube.com/embed/UB3E-zDVSQw" allow="accelerator; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div class="taburi-iframe">
-              <a href="https://www.youtube.com/embed/UB3E-zDVSQw" target="ifr-video">Gucci's Fall Winter 2024</a>
-              <a href="https://www.youtube.com/embed/o5fC5LsOp6g" target="ifr-video">Chanel Spring-Summer 2024</a>
-              <a href="https://www.youtube.com/embed/M8YjvHYbZ9w" target="ifr-video">Louis Vuitton Fall 2024</a>
-            </div>
-        </div>        
+          <div class="taburi-iframe">
+            <a href="https://www.youtube.com/embed/UB3E-zDVSQw" target="ifr-video">Gucci's Fall Winter 2024</a>
+            <a href="https://www.youtube.com/embed/o5fC5LsOp6g" target="ifr-video">Chanel Spring-Summer 2024</a>
+            <a href="https://www.youtube.com/embed/M8YjvHYbZ9w" target="ifr-video">Louis Vuitton Fall 2024</a>
+          </div>
+        </div>
       </div>
-      
       <!-- Footer Area -->
       <footer class="grid-area-footer grid-item">
         <a href="#" id="link-top" style="padding: 3%;"><div id="triunghi"></div></a>
