--- a/index.html
+++ b/index.html
@@ -6,8 +6,43 @@
   <title>The Darker Side</title>
   <link rel="stylesheet" href="Proiectweb/CSS/Styles.css">
   <link rel="stylesheet" href="Proiectweb/CSS/GeneralCSS.css">
+  <link rel="stylesheet" href="Proiectweb/CSS/menu.css">
+  <link rel="stylesheet" href="Proiectweb/CSS/print.css" media="print">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script> <!-- Font Awesome for icons -->
 </head>
 <body>
+
+  <!-- Navigation Menu -->
+  <nav>
+    <div class="menu-wrap">
+      <input type="checkbox" class="toggler">
+      <div class="hamburger"><div></div></div>
+      <div class="menu">
+        <div>
+          <div>
+            <ul>
+              <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
+              <li><a href="#">Products</a>
+                <ul class="dropdown">
+                  <li><a href="#">Product 1</a></li>
+                  <li><a href="#">Product 2</a></li>
+                  <li><a href="#">Product 3</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Sections</a>
+                <ul class="dropdown">
+                  <li><a href="#Welcome">Welcome</a></li>
+                  <li><a href="#Promotions">Promotions</a></li>
+                  <li><a href="#Contact">Contact</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
+
   <header>
     <div class="header">
       <nav>
